<resources>
    <string name="menu_print">Print</string>
    <string name="printContact">Print contact via</string>
    <string name="no_way_to_print">No application available to print the contact.</string>
    <string name="no_sdcard_title">No SD card</string>
    <string name="selected_item_count">%d selected</string>
    <string name="recentCalls_delete">Delete</string>
    <string name="menu_selectAll">Select all</string>
    <string name="menu_clearAll">Deselect all</string>
    <string name="sim1">SIM1</string>
    <string name="sim2">SIM2</string>
    <string name="all_resources">All Resources</string>
    <string name="choose_resources_header">Choose Resources</string>
    <string name="all_tab_label1">ALL</string>
    <string name="call_log_item_count">(%1$d)</string>
    <string name="call_indicator_3g">3G</string>
    <string name="call_sipcall">Internet call</string>
    <string name="call_pin_dialog_title">Select SIM card</string>
    <string name="call_people">People</string>
    <string name="call_ip_dial">IP dial</string>
    <string name="call_speed_dial">Speed dial</string>
    <string name="send_message">Send message</string>
    <string name="call_video_call">Video call</string>
    <string name="add_speed_dial">Tap to add speed dial</string>
    <string name="speed_dial_added">%1$s (%2$s) added to speed dial %3$s</string>
    <string name="speed_dial_added2">%1$s added to speed dial %2$s</string>
    <string name="remove_speed_dial">Remove</string>
    <string name="remove_sd_confirm_1">Are you sure you want to remove %1$s (%2$s) from speed dial %3$s?</string>
    <string name="remove_sd_confirm_2">Are you sure you want to remove %1$s from speed dial %2$s?</string>
    <string name="emergencycall">Emergency call</string>
    <string name="imei_invalid">Invalid</string>
    <string name="call_log_filter_all_resources">All resources</string>
    <string name="turn_on_3g_service_message">3G service is off now, would you like to turn it on?</string>
    <string name="associate_sim_missing_message">The %1$s is unavailable. Would you like to place the call via %2$s</string>
    <string name="associate_sim_missing_other">Other</string>
    <string name="sim_manage_call_via">Call via</string>
    <string name="callFailed_simError">No SIM or SIM error</string>
    <string name="ip_dial_error_toast_for_no_ip_prefix_number">Please enter IP prefix number first in voice call settings.</string>
    <string name="ip_dial_error_toast_for_sip_call_selected">IP dial function is not applicable to internet call.</string>
    <string name="sd_add">Add</string>
    <string name="reselect_number">The number has already been assigned to a speed dial key, please select another nubmer.</string>
    <string name="calllog_today">Today</string>
    <string name="calllog_yesterday">Yesterday</string>
    <string name="menu_association">Associate card</string>
    <string name="menu_remove_association">Remove card Association</string>
    <string name="remove_association_message">Are you sure you want to remove card association to this number?</string>
    <string name="remove_number_title">Remove</string>
    <string name="warning_detail">The card association will import the contact into phone. Would you like to continue the card association?</string>
    <string name="block_incoming_call">Block incoming calls</string>
    <string name="block_video_incoming_call">Block video incoming calls directly</string>
    <string name="menu_actionbar_selected_items">%s selected</string>
    <string name="has_double_phone_number">Cannot save same type number twice, please check it.</string>
    <string name="phone_book_busy">Phone book is busy now,please try later.</string>
    <string name="sim_invalid">Cannot save contact when card is invalid.</string>
    <string name="cannot_insert_null_number">Cannot save contact whose number is empty.</string>
    <string name="AirPlane_mode_on">Cannot save contact when Airplane mode is on.</string>
    <string name="FDNEnabled">Cannot save contact when FDN Enabled.</string>
    <string name="sim_invalid_number">Cannot save invalid number.</string>
    <string name="email_invalid">Cannot save invalid email.</string>
    <string name="email_2g_invalid">Cannot save email to 2G SIM, please select 3G SIM to save.</string>
    <string name="sim_invalid_fix_number">Cannot save invalid fix number.</string>
    <string name="AirPlane_mode_on_edit">Cannot edit contact when Airplane mode is on.</string>
    <string name="msg_loading_sim_contacts_toast">Loading SIM contacts in the background, please wait for a moment.</string>
    <string name="fix_number_too_long">Fix number is too long.</string>
    <string name="name_too_long">Name is too long.</string>
    <string name="storage_full">Storage is full.</string>
    <string name="number_too_long">Number is too long.</string>
    <string name="generic_failure">Generic Failure.</string>
    <string name="email_too_long">Email is too long</string>
    <string name="send_groupsms_no_number_more">%1$s and %2$s more contacts have no valid phone number.</string>
    <string name="send_groupsms_no_number_1">%1$s has no valid phone number.</string>
    <string name="send_groupsms_no_number_2">%1$s and %2$s have no valid phone number.</string>
    <string name="account_type_sim">SIM Account</string>
    <string name="account_type_usim">USIM Account</string>
    <string name="account_type_local_phone">Phone Local Account</string>
    <string name="local_account_type">Local Account</string>
    <string name="local_account_label">Local Account</string>
    <string name="account_type_sim_label">SIM-only, unsynced</string>
    <string name="account_type_usim_label">USIM-only, unsynced</string>
    <string name="please_wait">Please wait</string>
    <string name="move_contacts_to">Move contacts to</string>
    <string name="menu_move_group">Move group members</string>
    <string name="menu_message_group">Send group message</string>
    <string name="menu_email_group">Send group E-mail</string>
    <string name="moving_group_members">Moving group members…</string>
    <string name="removing_group_members_sucess">Remove group members successfully</string>
    <string name="moving_group_members_sucess">Move group members successfully</string>
    <string name="moving_group_members_fail">Move group members failed</string>
    <string name="no_valid_number_in_group">This group has no contact with valid phone number.</string>
    <string name="no_valid_email_in_group">This group has no contact with E-mail.</string>
    <string name="email_error">You should install Email application, or configure your account!</string>
    <string name="usim_group_name_exceed_limit">Group name too long for the storage.</string>
    <string name="usim_group_count_exceed_limit">No more new groups can be added to the storage.</string>
    <string name="name_needed">Name is needed</string>
    <string name="save_group_fail">Save group failed.</string>
    <string name="group_name_exists">The group name already exists.</string>
    <string name="group_discard_member">Discard</string>
    <string name="group_discard_member_reason">The modifications will be discarded because the group name is invalid.</string>
    <string name="import_export_title">Import/Export</string>
    <string name="next">Next</string>
    <string name="imexport_bridge_sd_card">SD Card</string>
    <string name="tips_source">Copy contacts from</string>
    <string name="tips_target">Copy contacts to</string>
    <string name="back">Back</string>
    <string name="imexport_title">Import/Export Contacts</string>
    <string name="xport_error_one_account">Please insert a SIM card or SD card to import/export contacts.</string>
    <string name="store_contact_to">Store the contact to</string>
    <string name="menu_delete_contact">Delete contact</string>
    <string name="menu_conference_call">Conference call</string>
    <string name="notifier_finish_delete_title">Delete contacts successfully</string>
    <string name="notifier_finish_delete_content">Deleted %d contact(s)</string>
    <string name="notifier_finish_copy_title">Copy contacts successfully</string>
    <string name="notifier_finish_copy_content">Copied %d contact(s)</string>
    <string name="notifier_multichoice_process_report" formatted="false">"Completed: %d
Incompleted: %d"</string>
    <string name="notifier_failure_by_sim_full" formatted="false">"Failure caused by SIM storage full
Completed: %d
Incompleted: %d"</string>
    <string name="notifier_failure_sim_notready" formatted="false">"Failure caused by SIM not ready
Completed: %d
Incompleted: %d"</string>
    <string name="notifier_cancel_delete_title">Deleting contact(s) canceled</string>
    <string name="notifier_fail_delete_title">Deleting contact(s) failure</string>
    <string name="notifier_cancel_copy_title">Copying contact(s) canceled</string>
    <string name="notifier_fail_copy_title">Copying contact(s) failure</string>
    <string name="notifier_progress__delete_will_start_message">Contact(s) will be deleted shortly.</string>
    <string name="notifier_progress_delete_message" formatted="false">Deleting %s/%s: %s</string>
    <string name="notifier_progress_delete_description">Deleting %s</string>
    <string name="notifier_progress__copy_will_start_message">Contact(s) will be copied shortly.</string>
    <string name="notifier_progress_copy_message" formatted="false">Copying %s/%s: %s</string>
    <string name="notifier_progress_copy_description">Copying %s</string>
    <string name="multichoice_confirmation_title_delete">Canceling contact(s) deletetion</string>
    <string name="multichoice_confirmation_message_delete">Cancel to delete contact(s)?</string>
    <string name="multichoice_confirmation_title_copy">Canceling contact(s) copy</string>
    <string name="multichoice_confirmation_message_copy">Cancel to copy contact(s)?</string>
    <string name="multichoice_no_select_alert">No item is selected.</string>
    <string name="multichoice_delete_confirm_message">Are you sure to delete the selected contact(s)?</string>
    <string name="onscreenAddParticipant">Add Participant</string>
    <string name="phone_answer_toast_txt">Drag right to answer</string>
    <string name="phone_decline_toast_txt">Drag left to decline</string>
    <string name="phone_call_ended_call_back_txt">Call back</string>
    <string name="phone_call_ended_send_message_txt">Send message</string>
    <string name="phone_call_ended_add_to_contacts_txt">Add to Contacts</string>
    <string name="phone_call_ended_view_contact_txt">View contact</string>
    <string name="phone_strings_btn_change_to_voice_txt">Change to voice</string>
    <string name="vt_share_video_camera">Share video</string>
    <string name="phone_strings_btn_camera_off_txt">Camera off</string>
    <string name="phone_strings_ans_mach_app_name_txt">Answering Machine</string>
    <string name="vt_incoming_answer_video">Hold and Answer Video</string>
    <string name="vt_incoming_answer_voice">Hold and Answer Voice</string>
    <string name="clh_large_decline_incoming_call">Decline incoming call</string>
    <string name="phone_strings_btn_merge_txt">Merge</string>
    <string name="phone_strings_btn_audio_txt">Audio output</string>
    <string name="audio_mode_speaker">Speaker</string>
    <string name="onscreenHoldText_unselected">Hold call</string>
    <string name="onscreenShowDialpadText">Dialpad</string>
    <string name="onscreenMuteText">Mute</string>
    <string name="onscreenAddCallText">Add call</string>
    <string name="onscreenMergeCallsText">Merge calls</string>
    <string name="onscreenSwapCallsText">Swap</string>
    <string name="onscreenManageConferenceText">Manage conference</string>
    <string name="onscreenVideoCallText">Video call</string>
    <string name="onscreenSwitchCameraText">Switch camera</string>
    <string name="onscreenOverflowText">More</string>
</resources>