<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/bottomButtons" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="0.0dip" android:layout_alignParentBottom="true" android:animateLayoutChanges="true" android:elevation="@dimen/call_button_elevation"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center|top" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="false">
        <ToggleButton android:id="@id/audioButton" android:text="@string/phone_strings_btn_audio_txt" android:drawableTop="@drawable/btn_compound_audio" android:contentDescription="@string/audio_mode_speaker" style="@style/InCallCompoundButton" />
        <ToggleButton android:id="@id/muteButton" android:text="@string/onscreenMuteText" android:drawableTop="@drawable/btn_compound_mute" android:contentDescription="@string/onscreenMuteText" style="@style/InCallCompoundButton" />
        <ToggleButton android:id="@id/dialpadButton" android:text="@string/onscreenShowDialpadText" android:drawableTop="@drawable/btn_compound_dialpad" android:contentDescription="@string/onscreenShowDialpadText" style="@style/InCallCompoundButton" />
        <TextView android:id="@id/changeToVideoButton" android:visibility="gone" android:text="@string/onscreenVideoCallText" android:drawableTop="@drawable/btn_change_to_video" android:contentDescription="@string/onscreenVideoCallText" style="@style/InCallButton" />
        <ToggleButton android:id="@id/switchCameraButton" android:visibility="gone" android:text="@string/onscreenSwitchCameraText" android:drawableTop="@drawable/somc_btn_video_switch" android:contentDescription="@string/onscreenSwitchCameraText" style="@style/InCallCompoundButton" />
        <ToggleButton android:id="@id/pauseVideoButton" android:visibility="gone" android:text="@string/phone_strings_btn_camera_off_txt" android:drawableTop="@drawable/btn_compound_video_off" android:contentDescription="@string/phone_strings_btn_camera_off_txt" style="@style/InCallCompoundButton" />
        <ToggleButton android:id="@id/holdButton" android:text="@string/onscreenHoldText_unselected" android:drawableTop="@drawable/btn_compound_hold" android:contentDescription="@string/onscreenHoldText_unselected" style="@style/InCallCompoundButton" />
        <TextView android:id="@id/swapButton" android:visibility="gone" android:text="@string/onscreenSwapCallsText" android:drawableTop="@drawable/btn_swap" android:contentDescription="@string/onscreenSwapCallsText" style="@style/InCallButton" />
        <TextView android:id="@id/addButton" android:visibility="gone" android:text="@string/onscreenAddCallText" android:drawableTop="@drawable/btn_add" android:contentDescription="@string/onscreenAddCallText" style="@style/InCallButton" />
        <TextView android:id="@id/mergeButton" android:visibility="gone" android:text="@string/phone_strings_btn_merge_txt" android:drawableTop="@drawable/btn_merge" android:contentDescription="@string/onscreenMergeCallsText" style="@style/InCallButton" />
        <ImageButton android:id="@id/addParticipant" android:background="@drawable/btn_addparticipant" android:visibility="gone" android:contentDescription="@string/onscreenAddParticipant" style="@style/InCallButton" />
        <TextView android:id="@id/overflowButton" android:visibility="gone" android:text="@string/onscreenOverflowText" android:drawableTop="@drawable/btn_overflow" android:contentDescription="@string/onscreenOverflowText" style="@style/InCallButton" />
        <TextView android:id="@id/manageVideoCallConferenceButton" android:visibility="gone" android:text="@string/onscreenManageConferenceText" android:drawableTop="@drawable/ic_group_white_24dp" android:contentDescription="@string/onscreenManageConferenceText" style="@style/InCallButton" />
        <TextView android:id="@id/changeToVoiceButton" android:visibility="gone" android:text="@string/phone_strings_btn_change_to_voice_txt" android:drawableTop="@drawable/somc_btn_change_to_voice" android:contentDescription="@string/phone_strings_btn_change_to_voice_txt" style="@style/InCallButton" />
        <TextView android:id="@id/shareVideoButton" android:visibility="gone" android:text="@string/vt_share_video_camera" android:drawableTop="@drawable/somc_btn_share_video" android:contentDescription="@string/vt_share_video_camera" style="@style/InCallButton" />
    </LinearLayout>
</LinearLayout>