<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/somcCallEndedInteractionFragment" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:id="@id/somcCallEndedInteraction" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="false">
        <ToggleButton android:id="@id/callEndedSendSms" android:text="@string/phone_call_ended_send_message_txt" android:drawableTop="@drawable/somc_call_ended_interacion_send_sms_button" android:contentDescription="@string/phone_call_ended_send_message_txt" style="@style/InCallCompoundButton" />
        <ToggleButton android:id="@id/callEndedAddToContacts" android:text="@string/phone_call_ended_add_to_contacts_txt" android:drawableTop="@drawable/somc_call_ended_interacion_add_to_contacts_button" android:contentDescription="@string/phone_call_ended_add_to_contacts_txt" style="@style/InCallCompoundButton" />
        <ToggleButton android:id="@id/callEndedViewContacts" android:text="@string/phone_call_ended_view_contact_txt" android:drawableTop="@drawable/somc_call_ended_interacion_view_contacts_button" android:contentDescription="@string/phone_call_ended_view_contact_txt" style="@style/InCallCompoundButton" />
        <ToggleButton android:id="@id/callEndedCallBack" android:text="@string/phone_call_ended_call_back_txt" android:drawableTop="@drawable/somc_call_ended_interacion_call_back_button" android:contentDescription="@string/phone_call_ended_call_back_txt" style="@style/InCallCompoundButton" />
    </LinearLayout>
</RelativeLayout>