<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:textSize="@dimen/am_counter_text_size" android:textColor="@color/somc_color_white" android:id="@id/answeringMachineIndicator" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/phone_strings_ans_mach_app_name_txt" android:singleLine="true" style="@style/CallBannerTextShadow" />
    </LinearLayout>
    <com.android.incallui.SomcSlidingTab android:id="@id/slidingTab" android:tag="Portrait" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layoutDirection="ltr" SomcSlidingTab:hintText="@string/phone_answer_toast_txt" SomcSlidingTab:hintLeftSlideText="@string/phone_answer_toast_txt" SomcSlidingTab:hintRightSlideText="@string/phone_decline_toast_txt" SomcSlidingTab:hintTextSize="@dimen/small_slider_text_size" SomcSlidingTab:marginBottom="@dimen/small_slider_margin_bottom" SomcSlidingTab:marginStart="@dimen/small_slider_margin_start" SomcSlidingTab:bgStartImage="@drawable/somc_cover_slider_bg_right" SomcSlidingTab:bgEndImage="@drawable/somc_cover_slider_bg_left" SomcSlidingTab:bgDefaultImage="@drawable/somc_cover_slider_bg_incoming" xmlns:SomcSlidingTab="http://schemas.android.com/apk/res-auto" />
</RelativeLayout>