<?xml version="1.0" encoding="utf-8"?>
<com.android.incallui.SomcWaitingVideoCallView android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/videoWaitingCallView" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center" android:id="@id/answerVideoButton" android:background="@drawable/somc_btn_incoming_call_answer_video" android:focusable="true" android:layout_width="fill_parent" android:layout_height="@dimen/vt_answer_button_height" android:layout_marginBottom="@dimen/vt_incall_screen_button_bottom_margin" android:layout_marginStart="@dimen/vt_waiting_screen_padding_start" android:layout_marginEnd="@dimen/vt_waiting_screen_padding_end">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_vid_answer_with_video" android:layout_marginStart="@dimen/vt_incall_screen_button_margin_start" android:layout_marginEnd="@dimen/vt_incall_screen_button_margin_end" />
            <TextView android:textAppearance="?android:textAppearance" android:textSize="@dimen/vt_waitingcall_button_text_size" android:textColor="@android:color/white" android:layout_gravity="center_vertical" android:id="@id/answerVideoButtonText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/vt_incoming_answer_video" android:textAllCaps="true" android:layout_marginEnd="@dimen/vt_incall_screen_button_margin_end" />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout android:gravity="center" android:id="@id/answerVoiceButton" android:background="@drawable/somc_btn_incoming_call_answer_voice" android:focusable="true" android:layout_width="fill_parent" android:layout_height="@dimen/vt_answer_button_height" android:layout_marginBottom="@dimen/vt_incall_screen_button_bottom_margin" android:layout_marginStart="@dimen/vt_waiting_screen_padding_start" android:layout_marginEnd="@dimen/vt_waiting_screen_padding_end">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_vid_answer_with_voice" android:layout_marginStart="@dimen/vt_incall_screen_button_margin_start" android:layout_marginEnd="@dimen/vt_incall_screen_button_margin_end" />
            <TextView android:textAppearance="?android:textAppearance" android:textSize="@dimen/vt_waitingcall_button_text_size" android:textColor="@android:color/white" android:layout_gravity="center_vertical" android:id="@id/answerVoiceButtonText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vt_incoming_answer_voice" android:textAllCaps="true" android:layout_marginEnd="@dimen/vt_incall_screen_button_margin_end" />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout android:gravity="center" android:id="@id/declineButton" android:background="@drawable/somc_btn_incoming_call_decline" android:focusable="true" android:layout_width="fill_parent" android:layout_height="@dimen/vt_answer_button_height" android:layout_marginStart="@dimen/vt_waiting_screen_padding_start" android:layout_marginEnd="@dimen/vt_waiting_screen_padding_end">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_vid_decline_videocall" android:layout_marginStart="@dimen/vt_incall_screen_button_margin_start" android:layout_marginEnd="@dimen/vt_incall_screen_button_margin_end" />
            <TextView android:textAppearance="?android:textAppearance" android:textSize="@dimen/vt_waitingcall_button_text_size" android:textColor="@android:color/white" android:layout_gravity="center_vertical" android:id="@id/rejectButtonText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/clh_large_decline_incoming_call" android:textAllCaps="true" android:layout_marginEnd="@dimen/vt_incall_screen_button_margin_end" />
        </LinearLayout>
    </RelativeLayout>
</com.android.incallui.SomcWaitingVideoCallView>